--- a/pix/src/main/res/layout/activity_main_lib.xml
+++ b/pix/src/main/res/layout/activity_main_lib.xml
@@ -71,15 +71,42 @@
 
     <FrameLayout
         android:id="@+id/mainFrameLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <View
-            android:id="@+id/status_bar_bg"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/margin_top"
-            android:background="@color/colorPrimaryPix"
-            android:translationY="@dimen/margin_top_nve" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|center"
+            android:orientation="vertical">
+            <View
+                android:id="@+id/status_bar_bg"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/margin_top"
+                android:background="@color/colorPrimaryPix"
+                android:translationY="@dimen/margin_top_nve" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|center"
+                android:elevation="8dp"
+                app:cardBackgroundColor="#000000"
+                app:cardCornerRadius="4dp">
+
+                <TextView
+                    style="@style/TextAppearance.MaterialComponents.Body1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="8dp"
+                    android:textColor="#FFFFFF"
+                    android:id="@+id/text_result"
+                    tools:text="Image is Blurry" />
+            </androidx.cardview.widget.CardView>
+
+
+        </LinearLayout>
+
 
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
