adding detection extras

--- a/pix/src/main/res/layout/activity_main_lib.xml
+++ b/pix/src/main/res/layout/activity_main_lib.xml
@@ -13,6 +13,7 @@
         android:keepScreenOn = "true"
         android:layout_gravity="center"
         app:cameraFacing = "back"
+        app:cameraEngine="camera2"
         app:cameraFlash = "off"
         app:cameraGestureLongTap = "autoFocus"
         app:cameraGesturePinch = "zoom"
